--- a/main.html
+++ b/main.html
@@ -8,6 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="#" alt="image not found">
+	<h1>Aditya Sharma</h1>
+	<a href="#">Linkedin Profile</a>
+	<div id="skills">
+		<h2>Skills</h2>
+		<ul>
+			<li>C++</li>
+			<li>Advance DSA</li>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>JavaScript</li>
+			<li>OOPs</li>
+			<li>Tailwind CSS</li>
+			<li>React</li>
+		</ul>
+	</div>
+	<div id="projects">
+		<h2>Projects</h2>
+		<ul>
+			<li>Smart Home Automation</li>
+			<li>Spotify Clone</li>
+			<li>CodeHelp Clone</li>
+		</ul>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
