--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<img src="#" alt="image not found">
 	<h1>Aditya Sharma</h1>
-	<a href="#">Linkedin Profile</a>
+	<a href="www.linkedin.com/in/aditya-sharma-923999297">Linkedin Profile</a>
 	<div id="skills">
 		<h2>Skills</h2>
 		<ul>
